--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -6,6 +6,44 @@
     <title>SignSport — Подбор спорта по почерку</title>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="images/logo.png" alt="logotip">
+        <ul class="textnav">
+            <a href=""><b>Главное</b></a>
+            <a href=""><b>Анализ</b></a>
+            <a href=""><b>О нас</b></a>
+        </ul>
+    </div>
+
+    <div class="mainpage">
+        <h1>Добро пожаловать на SignSport!</h1>
+        <p class="subtitle"><i>Подберём подходящий для вас вид спорта не только по вашей физической форме, но и по личностным особенностям, используя для этого анализ вашего почерка!</i></p>
+    <img src="images/fencing.png" alt="fencing">
+    </div>
+    <div class="text">
+        <p>Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.</p>
+    <img src="images/tennis.png" alt="tennis">
+    </div>
+    <div class="list">
+        <p>Этапы работы проекта:</p>
+        <ul class="spisok">
+            <p>Проанализировать почерк человека</p>
+            <p>Загрузить данные отчета в нейросеть</p>
+            <p>Получите долгожданный результат</p>
+            <p>При необходимости – задайте вопрос нейросети</p>
+        </ul>
+        <img src="images/athlete.png" alt="athlete">
+    </div>
+    <div class="AI">
+        <img src="images/photo.png" alt="mini capibara">
+        <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
+        <img src="images/arrow.png" alt="arrow">
+    </div>
+    <div class="butten">Проанализировать сейчас</div>
+    <footer>
+        <div class="wrapper">
+      <p>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</p>
+    </footer>
+  </div>
 </body>
 </html>
