--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignSport — Подбор спорта по почерку</title>
+    <link href=" https://fonts.googleapis.com/css?family Montserrat:400,700 Roboto:400,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="header">
-        <img src="images/logo.png" alt="logotip">
+        <div class="navigation">
+        <img src="images/logo.png" alt="logotip" width="310" height="96">
         <ul class="textnav">
             <a href=""><b>Главное</b></a>
             <a href=""><b>Анализ</b></a>
             <a href=""><b>О нас</b></a>
         </ul>
+        </div>
     </div>
 
     <div class="mainpage">
         <h1>Добро пожаловать на SignSport!</h1>
         <p class="subtitle"><i>Подберём подходящий для вас вид спорта не только по вашей физической форме, но и по личностным особенностям, используя для этого анализ вашего почерка!</i></p>
-    <img src="images/fencing.png" alt="fencing">
+    <img src="images/fencing.png" alt="fencing" width="347" height="347">
     </div>
     <div class="text">
         <p>Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.</p>
-    <img src="images/tennis.png" alt="tennis">
+    <img src="images/tennis.png" alt="tennis" width="347" height="347">
     </div>
     <div class="list">
         <p>Этапы работы проекта:</p>
@@ -32,17 +38,17 @@
             <p>Получите долгожданный результат</p>
             <p>При необходимости – задайте вопрос нейросети</p>
         </ul>
-        <img src="images/athlete.png" alt="athlete">
+        <img src="images/athlete.png" alt="athlete" width="347" height="347">
     </div>
     <div class="AI">
-        <img src="images/photo.png" alt="mini capibara">
+        <img src="images/photo.png" alt="mini capibara" width="370" height="450">
         <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
-        <img src="images/arrow.png" alt="arrow">
+        <img src="images/arrow.png" alt="arrow" height="150" width="170">
     </div>
     <div class="butten">Проанализировать сейчас</div>
     <footer>
         <div class="wrapper">
-      <p>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</p>
+      <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
     </footer>
   </div>
 </body>
