--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -11,13 +11,15 @@
 
 <body>
     <div class="header">
+        <div class="wrapper">
         <div class="navigation">
         <img src="images/logo.png" alt="logotip" width="310" height="96">
         <ul class="textnav">
-            <a href=""><b>Главное</b></a>
-            <a href=""><b>Анализ</b></a>
-            <a href=""><b>О нас</b></a>
+            <li><a href=""><b>Главное</b></a></li>
+            <li><a href=""><b>Анализ</b></a></li>
+            <li><a href=""><b>О нас</b></a></li>
         </ul>
+        </div>
         </div>
     </div>
 
