готов баннер, занимаюсь началом сайта

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="wrapper">
         <div class="navigation">
-        <img src="images/logo.png" alt="logotip" width="310" height="96">
+        <img src="images/logo.png" alt="SignSport">
         <ul class="textnav">
             <li><a href=""><b>Главное</b></a></li>
             <li><a href=""><b>Анализ</b></a></li>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="mainpage">
-        <h1>Добро пожаловать на SignSport!</h1>
+        <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle"><i>Подберём подходящий для вас вид спорта не только по вашей физической форме, но и по личностным особенностям, используя для этого анализ вашего почерка!</i></p>
     <img src="images/fencing.png" alt="fencing" width="347" height="347">
     </div>
@@ -49,7 +49,7 @@
     </div>
     <div class="butten">Проанализировать сейчас</div>
     <footer>
-        <div class="wrapper">
+        <div>
       <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
     </footer>
   </div>
