начало - сделано (вроде)

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -26,7 +26,7 @@
     <div class="mainpage">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
         <p class="subtitle"><i>Подберём подходящий для вас вид спорта не только по вашей физической форме, но и по личностным особенностям, используя для этого анализ вашего почерка!</i></p>
-    <img src="images/fencing.png" alt="fencing" width="347" height="347">
+    <img src="images/fencing.png" alt="fencing">
     </div>
     <div class="text">
         <p>Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.</p>
