--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignSport — Подбор спорта по почерку</title>
-    <link href=" https://fonts.googleapis.com/css?family Montserrat:400,700 Roboto:400,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -30,9 +32,9 @@
     </div>
     <div class="text">
         <p>Нейросеть <strong>SignSportNeuralNetwork 1.0 (сокращенно 2S2N 1.0)</strong> использует результаты графологического анализа почерка для определения вида спорта, который подходит вашему характеру — а не только физическим данным. Это уникальный подход, основанный на научных связях между почерком, личностью и предрасположенностью к определённым видам физической активности.</p>
-    <img src="images/tennis.png" alt="tennis" width="347" height="347">
     </div>
     <div class="list">
+        <img src="images/tennis.png" alt="tennis">
         <p>Этапы работы проекта:</p>
         <ul class="spisok">
             <p>Проанализировать почерк человека</p>
