--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -35,7 +35,7 @@
     </div>
     <div class="list">
         <img src="images/tennis.png" alt="tennis">
-        <p>Этапы работы проекта:</p>
+        <p class = "name">Этапы работы проекта:</p>
         <ul class="spisok">
             <p>Проанализировать почерк человека</p>
             <p>Загрузить данные отчета в нейросеть</p>
@@ -44,7 +44,7 @@
         </ul>
         <img src="images/athlete.png" alt="athlete" width="347" height="347">
     </div>
-    <div class="AI">
+    <div class="[AI">
         <img src="images/photo.png" alt="mini capibara" width="370" height="450">
         <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
         <img src="images/arrow.png" alt="arrow" height="150" width="170">
