работа над новой частью страницы и создание страницы с нейросетью

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -41,10 +41,11 @@
             <p>Загрузить данные отчета в нейросеть</p>
             <p>Получите долгожданный результат</p>
             <p>При необходимости – задайте вопрос нейросети</p>
+            <img src="images/athlete.png" alt="athlete">
         </ul>
-        <img src="images/athlete.png" alt="athlete" width="347" height="347">
     </div>
-    <div class="[AI">
+    
+    <div class="AI">
         <img src="images/photo.png" alt="mini capibara" width="370" height="450">
         <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
         <img src="images/arrow.png" alt="arrow" height="150" width="170">
