--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -17,7 +17,7 @@
         <div class="navigation">
         <img src="images/logo.png" alt="SignSport">
         <ul class="textnav">
-            <li><a href=""><b>Главное</b></a></li>
+            <li><a href="#"><b>Главное</b></a></li>
             <li><a href=""><b>Анализ</b></a></li>
             <li><a href=""><b>О нас</b></a></li>
         </ul>
