html кода 2 страницы сайта

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -18,7 +18,7 @@
         <img src="images/logo.png" alt="SignSport">
         <ul class="textnav">
             <li><a href="#"><b>Главное</b></a></li>
-            <li><a href=""><b>Анализ</b></a></li>
+            <li><a href="AISignSport.html"><b>Анализ</b></a></li>
             <li><a href=""><b>О нас</b></a></li>
         </ul>
         </div>
