--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -15,7 +15,9 @@
     <div class="header">
         <div class="wrapper">
         <div class="navigation">
-        <img src="images/logo.png" alt="SignSport">
+        <a href="#">
+            <img src="images/logo.png" alt="SignSport">
+        </a>
         <ul class="textnav">
             <li><a href="#"><b>Главное</b></a></li>
             <li><a href="AISignSport.html"><b>Анализ</b></a></li>
