--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -40,10 +40,10 @@
         <p class = "name">Этапы работы проекта:</p>
         <ul class="spisok">
             <img src="images/athlete.png" alt="athlete">
-            <p class="textlist">Проанализировать почерк человека</p>
-            <p class="textlist">Загрузить данные отчета в нейросеть</p>
-            <p class="textlist">Получите долгожданный результат</p>
-            <p class="textlist">При необходимости – задайте вопрос нейросети</p>
+            <p class="textspisok">Проанализировать почерк человека</p>
+            <p class="textspisok">Загрузить данные отчета в нейросеть</p>
+            <p class="textspisok">Получите долгожданный результат</p>
+            <p class="textspisok">При необходимости – задайте вопрос нейросети</p>
         </ul>
     </div>
     
