--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -37,24 +37,27 @@
 
     <div class="list">
         <img src="images/tennis.png" alt="tennis">
-        <p class = "name">Этапы работы проекта:</p>
+        <p class="name">Этапы работы проекта:</p>
         <ul class="spisok">
+            <li class="textspisok">Проанализировать почерк человека</li>
+            <li class="textspisok">Загрузить данные отчета в нейросеть</li>
+            <li class="textspisok">Получите долгожданный результат</li>
+            <li class="textspisok">При необходимости – задайте вопрос нейросети</li>
             <img src="images/athlete.png" alt="athlete">
-            <p class="textspisok">Проанализировать почерк человека</p>
-            <p class="textspisok">Загрузить данные отчета в нейросеть</p>
-            <p class="textspisok">Получите долгожданный результат</p>
-            <p class="textspisok">При необходимости – задайте вопрос нейросети</p>
-        </ul>
-    </div>
-    
+    </ul>
+</div>
+
     <div class="AI">
         <img src="images/photo.png" alt="mini capibara" width="370" height="450">
         <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
-        <img src="images/arrow.png" alt="arrow" height="150" width="170">
     </div>
    
 
-    <div class="butten">Проанализировать сейчас</div>
+    <div class="arrow">
+        <img src="images/arrow.png" alt="arrow">
+        <p class="butten">Проанализировать сейчас</p>
+
+    </div>
     
 
     <footer>
