--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -48,8 +48,8 @@
 </div>
 
     <div class="AI">
-        <img src="images/photo.png" alt="mini capibara" width="370" height="450">
-        <p>Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
+        <img src="images/photo.png" alt="mini capibara">
+        <p class="AI-text">Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
     </div>
    
 
