--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -36,14 +36,14 @@
     </div>
 
     <div class="list">
-        <img src="images/tennis.png" alt="tennis">
+        <img class = "tennis" src="images/tennis.png" alt="tennis">
         <p class="name">Этапы работы проекта:</p>
         <ul class="spisok">
             <li class="textspisok">Проанализировать почерк человека</li>
             <li class="textspisok">Загрузить данные отчета в нейросеть</li>
             <li class="textspisok">Получите долгожданный результат</li>
             <li class="textspisok">При необходимости – задайте вопрос нейросети</li>
-            <img src="images/athlete.png" alt="athlete">
+            <img class = "athletic" src="images/athlete.png" alt="athlete">
     </ul>
 </div>
 
@@ -55,7 +55,7 @@
 
     <div class="arrow">
         <img src="images/arrow.png" alt="arrow">
-        <p class="butten">Проанализировать сейчас</p>
+        <a href=""><p class="butten">Проанализировать сейчас</p></a>
 
     </div>
     
