переход редактируется на нейросеть

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -39,6 +39,7 @@
         <img class = "tennis" src="images/tennis.png" alt="tennis">
         <p class="name">Этапы работы проекта:</p>
         <ul class="spisok">
+            <!--<img class = "imgspisok" src="images/nomerspisok.png" alt="nomerspisok">-->
             <li class="textspisok">Проанализировать почерк человека</li>
             <li class="textspisok">Загрузить данные отчета в нейросеть</li>
             <li class="textspisok">Получите долгожданный результат</li>
@@ -47,17 +48,18 @@
     </ul>
 </div>
 
-    <div class="AI">
-        <img src="images/photo.png" alt="mini capibara">
-        <p class="AI-text">Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
-    </div>
-   
+<div class="AI">
+  <img src="images/photo.png" alt="mini capibara">
+  <p class="AI-text">Загрузите готовый отчёт по анализу вашего почерка — и получите рекомендацию по подходящему виду спорта прямо сейчас!</p>
+</div>
 
-    <div class="arrow">
-        <img src="images/arrow.png" alt="arrow">
-        <a href=""><p class="butten">Проанализировать сейчас</p></a>
+<div class="arrow-container">
+  <img src="images/arrow.png" alt="arrow" class="arrow">
+</div>
 
-    </div>
+<a href="#" class="butten-link">
+  <p class="butten">Проанализировать сейчас</p>
+</a>
     
 
     <footer>
