база для новой страницы сайта

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -19,7 +19,7 @@
                 <a href="#"><img src="images/logo.png" alt="SignSport"></a>
                 <ul class="textnav">
                     <li><a href="#"><b>Главное</b></a></li>
-                    <li><a href="#"><b>Анализ</b></a></li>
+                    <li><a href="neural_network.html"><b>Анализ</b></a></li>
                     <li><a href="#"><b>О нас</b></a></li>
                 </ul>
             </div>
@@ -42,8 +42,8 @@
             <!--<img class = "imgspisok" src="images/nomerspisok.png" alt="nomerspisok">-->
             <li class="textspisok">Проанализировать почерк человека</li>
             <li class="textspisok">Загрузить данные отчета в нейросеть</li>
-            <li class="textspisok">Получите долгожданный результат</li>
-            <li class="textspisok">При необходимости – задайте вопрос нейросети</li>
+            <li class="textspisok">Получить долгожданный результат</li>
+            <li class="textspisok">При необходимости – задать вопрос нейросети</li>
             <img class = "athletic" src="images/athlete.png" alt="athlete">
     </ul>
 </div>
