текст на новой странице

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -57,7 +57,7 @@
   <img src="images/arrow.png" alt="arrow" class="arrow">
 </div>
 
-<a href="#" class="butten-link">
+<a href="neural_network.html" class="butten-link">
   <p class="butten">Проанализировать сейчас</p>
 </a>
     
