--- a/neural_network.html
+++ b/neural_network.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,29 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-     <div class="header">
-            <div class="navigation">
-                <a href="SignSport-1.0.html"><img src="images/logo.png" alt="SignSport"></a>
-                <ul class="textnav">
-                    <li><a href="SignSport-1.0.html"><b>Главное</b></a></li>
-                    <li><a href="neural_network.html"><b>Анализ</b></a></li>
-                    <li><a href="#"><b>О нас</b></a></li>
-                </ul>
-            </div>
-            </div>
+
+    <div class="header">
+        <div class="navigation">
+            <a href="SignSport-1.0.html"><img src="images/logo.png" alt="SignSport"></a>
+            <ul class="textnav">
+                <li><a href="SignSport-1.0.html"><b>Главное</b></a></li>
+                <li><a href="neural_network.html"><b>Анализ</b></a></li>
+                <li><a href="#"><b>О нас</b></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="page">
+        <h1 class="maintext">Добро пожаловать на SignSport!</h1>
+        <p class="subtitle"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
+    </div>
+
+        <footer>
+        <div>
+      <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
     
+    </footer>
 </body>
 </html>
