настраивание новой страницы

--- a/neural_network.html
+++ b/neural_network.html
@@ -27,7 +27,7 @@
 
     <div class="page">
         <h1 class="maintext">Добро пожаловать на SignSport!</h1>
-        <p class="subtitle"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
+        <p class="subtitle_two"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
     </div>
 
         <footer>
