--- a/neural_network.html
+++ b/neural_network.html
@@ -20,7 +20,8 @@
             <ul class="textnav">
                 <li><a href="SignSport-1.0.html"><b>Главное</b></a></li>
                 <li><a href="neural_network.html"><b>Анализ</b></a></li>
-                <li><a href="#"><b>О нас</b></a></li>
+                <!--<li><a href="#"><b>О нас</b></a></li>-->
+                    <li><a href="#" class="custom-tooltip"><b>О нас</b> <span class="tooltip-text">Нейросеть SignSport поможет вам выбрать подходящий для вас вид спорта, опираясь на ваш характер и личность! Загрузите файл нейросети и она предоставит вам долгожданный подробный ответ. Также, можно будет задать ей простые вопросы, связанные с характером и спортом.</span></a></li>
             </ul>
         </div>
     </div>
