html code для загрузки кнопки загрузки файла

--- a/neural_network.html
+++ b/neural_network.html
@@ -31,6 +31,15 @@
         <p class="subtitle_two"><i>Не знаете, какой спорт вам подойдёт? Хотите подобрать его не только по физическим показателям, но и по личностным особенностям? Тогда вы по адресу!</i></p>
     </div>
 
+<form id="upload-container" method="POST" action="send.php">
+  <div class="upload-box">
+    <img src="images/bannerAI.png" alt="Загрузить файл" class="upload-icon">
+    <p>Загрузить отчет по анализу вашего почерка</p>
+    <label for="file-input" class="file-button">Выбрать файл</label>
+    <input id="file-input" type="file" name="file" multiple style="display: none;">
+  </div>
+</form>
+
         <footer>
         <div>
       <p><b>SignSportNeuralNetwork 1.0 (2S2N 1.0) — Анализ почерка для подбора вида спорта</b></p>
