предварительная кнопка загрузки файла для нейронки

--- a/neural_network.html
+++ b/neural_network.html
@@ -34,7 +34,7 @@
 <form id="upload-container" method="POST" action="send.php">
   <div class="upload-box">
     <img src="images/bannerAI.png" alt="Загрузить файл" class="upload-icon">
-    <p>Загрузить отчет по анализу вашего почерка</p>
+    <p><b>Загрузить отчет по анализу вашего почерка</b></p>
     <label for="file-input" class="file-button">Выбрать файл</label>
     <input id="file-input" type="file" name="file" multiple style="display: none;">
   </div>
