--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon.jpg" sizes="16x16" type="image/jpg">
 </head>
 
 <body>
