попытка номер один загрзить нейросеть на сайт

--- a/SignSport-1.0.html
+++ b/SignSport-1.0.html
@@ -45,7 +45,7 @@
             <li class="textspisok">Проанализировать почерк человека</li>
             <li class="textspisok">Загрузить данные отчета в нейросеть</li>
             <li class="textspisok">Получить долгожданный результат</li>
-            <li class="textspisok">При необходимости – задать вопрос нейросети</li>
+            <li class="textspisok">При необходимости – задать вопрос нейросети (пока в разработке)</li>
             <img class = "athletic" src="images/athlete.png" alt="athlete">
     </ul>
 </div>
